# ito

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
core/: main.py
ito/: compile.ps1  main.py
ito/app/: __init__.py  double_active.py  main.py
ito/core/: main.py  server.py
ito/task_tray/: main.py
