[tool.poetry]
name = "ito"
version = "0.1.0"
description = "An app for bridging I/O between multiple computers."
authors = ["Takkun053 <takkun.053@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
